--- a/prueba.html
+++ b/prueba.html
@@ -7,5 +7,9 @@
     <link href="style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Hello World!!!!!</h1>
+    <h2>I'm ready to get better to day</h2>
+    <p>Let's start whit some of code</p>
+  </body>
 </html>
