--- a/prueba.html
+++ b/prueba.html
@@ -11,5 +11,8 @@
     <h1>Hello World!!!!!</h1>
     <h2>I'm ready to get better to day</h2>
     <p>Let's start whit some of code</p>
+
+    <p>A new line in our repo</p>
+    <img src="/img/skateboard.jpg" alt="Santi Skater" />
   </body>
 </html>
