New imaginary error on prueba-imagenes

--- a/prueba.html
+++ b/prueba.html
@@ -14,5 +14,7 @@
 
     <p>A new line in our repo</p>
     <img src="/img/skateboard.jpg" alt="Santi Skater" />
+
+    <p>A new imaginary error on fix-error</p>
   </body>
 </html>
