--- a/prueba.html
+++ b/prueba.html
@@ -12,13 +12,14 @@
     <h2>I'm ready to get better to day</h2>
     <p>Let's start whit some of code</p>
 
-<<<<<<< HEAD
+    <<<<<<< HEAD
     <p>An imaginary error</p>
-=======
+    =======
     <p>A new line in our repo</p>
     <img src="/img/skateboard.jpg" alt="Santi Skater" />
 
     <p>A new imaginary error on fix-error</p>
->>>>>>> fix-error
+    >>>>>>> fix-error
+    <p>Now we are going to push changes from our local git to GitHub</p>
   </body>
 </html>
