Add a line from GitHub in branch html-skeleton

--- a/prueba.html
+++ b/prueba.html
@@ -21,5 +21,6 @@
     <p>A new imaginary error on fix-error</p>
     >>>>>>> fix-error
     <p>Now we are going to push changes from our local git to GitHub</p>
+  <p>Changes from GitHub from branch html-skeleton</p>
   </body>
 </html>
